--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/d3": "^7.4.3",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "typescript": "^5",
     "eslint": "^8",
     "eslint-config-next": "14.0.4"
   }
