--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "typescript": "^5.3.3",
     "tailwindcss": "^3.4.1",
     "postcss": "^8.4.35",
-    "autoprefixer": "^10.4.17"
+    "autoprefixer": "^10.4.17",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.21.0",
