Enhance repository visualization and configuration
- Add support for image domains in Next.js configuration
- Update package.json dependencies for improved type definitions and libraries
- Revise README to reflect updated tech stack and implementation roadmap
- Refactor RepositoryVisualization component for better data handling and visualization options
- Remove unused pages and components to streamline the project structure
- Update Tailwind CSS configuration for improved styling and responsiveness
- Adjust TypeScript settings for better type management

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,9 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "typeRoots": ["./node_modules/@types", "./src/types"],
+    "noImplicitAny": false
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
