--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.1.6",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-slider": "^1.2.3",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-switch": "^1.1.3",
+    "@radix-ui/react-tabs": "^1.1.3",
     "axios": "^1.6.7",
     "chart.js": "^4.4.8",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "d3": "^7.8.5",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.482.0",
@@ -21,7 +28,8 @@
     "react-dom": "^18",
     "react-icons": "^5.5.0",
     "react-syntax-highlighter": "^15.6.1",
-    "tailwind-merge": "^2.2.1"
+    "tailwind-merge": "^2.6.0",
+    "ui": "^0.2.4"
   },
   "devDependencies": {
     "@types/d3": "^7.4.3",
