--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "@octokit/rest": "^21.1.1",
+    "@radix-ui/react-tabs": "^1.1.3",
     "axios": "^1.6.7",
     "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
+    "clsx": "^2.1.1",
     "d3": "^7.8.5",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
@@ -27,7 +28,7 @@
     "rehype-highlight": "^7.0.2",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
-    "tailwind-merge": "^2.2.1"
+    "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
     "@types/d3": "^7.4.3",
